--- a/src/electron/package.json
+++ b/src/electron/package.json
@@ -1,5 +1,5 @@
 {
-  "name"    : "Cobalt Control",
+  "name"    : "Gateway Manager",
   "version" : "0.1.0",
   "main": "electron.js",
   "scripts": {
