--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "~3.3.7",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "json-schema-to-typescript": "^5.4.0",
     "rxjs": "^5.5.5",
     "stl": "^1.1.1",
     "three": "^0.87.1",
