--- a/src/assets/cfg/oegwServerConfig.json
+++ b/src/assets/cfg/oegwServerConfig.json
@@ -1,4 +1,5 @@
 {
-    "wsServer": "ws://127.0.0.1:1341",
-    "wsProtocol": "oegw"        
+    "wsIP": "127.0.0.1",
+    "wsPort": "1341",    
+    "detectServer": true    
 }
